# cli-apimon

./: .gitignore  PUBLISHING.md  README.md  pyproject.toml
apimon/: __init__.py  __main__.py  analytics.py  llm.py  proxy.py  storage.py
apimon/ui/: __init__.py  textual_ui.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: index.tsx
scripts/: dummy_api.py  simulate_requests.py
tests/: test_analytics.py  test_storage.py
