[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apimon"
version = "0.1.0"
description = "CLI tool for API monitoring, analytics, and route improvement suggestions"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "apimon", email = "hello@apimon.dev"}
]
keywords = ["api", "monitoring", "cli", "analytics", "proxy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "aiohttp>=3.9.0",
    "sqlalchemy>=2.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "textual>=0.50.0",
    "jinja2>=3.1.0",
    "python-dateutil>=2.8.0",
]

[project.scripts]
apimon = "apimon.__main__:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apimon*"]

[tool.setuptools.package-data]
apimon = ["py.typed"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
