[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apimon"
version = "0.1.0"
description = "CLI tool for API monitoring, analytics, and LLM-powered improvement insights"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "apimon", email = "hello@apimon.dev"}
]
keywords = ["api", "monitoring", "cli", "analytics", "proxy", "llm", "openai", "gemini", "anthropic", "ai-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "aiohttp>=3.9.0",
    "sqlalchemy>=2.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "textual>=0.50.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0.0",
    "google-genai>=0.3.0",
    "anthropic>=0.18.0",
]

[project.scripts]
apimon = "apimon.__main__:cli"

[project.urls]
Homepage = "https://github.com/apimon/apimon"
Repository = "https://github.com/apimon/apimon"
Issues = "https://github.com/apimon/apimon/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["apimon*"]

[tool.setuptools.package-data]
apimon = ["py.typed"]
